[gd_scene load_steps=8 format=3 uid="uid://cdtjbmul3qssi"]

[ext_resource type="Theme" uid="uid://c8wib8exwpaas" path="res://Resources/MainTheme.tres" id="1_nsdsp"]
[ext_resource type="Texture2D" uid="uid://3wbfrdbf88e6" path="res://assets/Icons/Back.svg" id="2_1k68s"]
[ext_resource type="Script" uid="uid://7swbc7vs3ymx" path="res://src/Main/winners.gd" id="2_vkjyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1k68s"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.411765)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ucnl"]
bg_color = Color(0.101961, 0.101961, 0.101961, 0.101961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nsdsp"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkjyl"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Winners" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nsdsp")
script = ExtResource("2_vkjyl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="VBoxContainer/Header/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = " Back "
icon = ExtResource("2_1k68s")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Place1" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1k68s")

[node name="Place2" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1k68s")

[node name="Place3" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1k68s")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_8ucnl")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Place1" type="PanelContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nsdsp")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place1"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place1/HBoxContainer"]
layout_mode = 2
text = "ðŸ¥‡1st Place"

[node name="Place1" type="OptionButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
fit_to_longest_item = false
item_count = 1
popup/item_0/id = 0

[node name="Teams" type="OptionButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place1/HBoxContainer"]
layout_mode = 2
fit_to_longest_item = false

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Place2" type="PanelContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nsdsp")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place2/HBoxContainer"]
layout_mode = 2
text = "ðŸ¥ˆ2nd Place"

[node name="Place2" type="OptionButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
fit_to_longest_item = false
item_count = 1
popup/item_0/id = 0

[node name="Teams2" type="OptionButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place2/HBoxContainer"]
layout_mode = 2
fit_to_longest_item = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Place3" type="PanelContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vkjyl")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place3"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place3/HBoxContainer"]
layout_mode = 2
text = "ðŸ¥‰3rd Place"

[node name="Place3" type="OptionButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true
fit_to_longest_item = false
item_count = 1
popup/item_0/id = 0

[node name="Teams3" type="OptionButton" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place3/HBoxContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Save" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ðŸ’¾Save"

[connection signal="pressed" from="VBoxContainer/Header/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place1/HBoxContainer/Place1" to="." method="_on_place_1_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place1/HBoxContainer/Teams" to="." method="_on_teams_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place2/HBoxContainer/Place2" to="." method="_on_place_2_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place2/HBoxContainer/Teams2" to="." method="_on_teams_2_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place3/HBoxContainer/Place3" to="." method="_on_place_3_item_selected"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Place3/HBoxContainer/Teams3" to="." method="_on_teams_3_item_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
